remove disableIllegalAccessWarning() in favor `--add-opens java.base/java.lang=ALL-UNNAMED`